<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/txtBtnMoneyconverter"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/btnMoneyConverter"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="520dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorAccent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/txtBtnMetricConverter"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/btnMetricConverter" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnMoneyConverter"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:background="@color/colorAccent"
            app:layout_constraintHorizontal_bias="1.0"/>
    <ImageView
            android:layout_width="351dp"
            android:layout_height="311dp" app:srcCompat="@drawable/laranjo"
            android:id="@+id/imgLaranjo" android:visibility="invisible"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnMetricConverter"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/txtLaranjoDescription" app:layout_constraintVertical_bias="0.2"
    />
    <Button
            android:text="@string/txtBtnEspecial"
            android:layout_width="122dp"
            android:layout_height="79dp"
            android:id="@+id/btnLaranjo" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imgLaranjo" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.727"
            android:background="@color/colorAccent"/>
    <ImageView
            android:layout_width="81dp"
            android:layout_height="95dp" app:srcCompat="@drawable/accounting"
            android:id="@+id/imgViewAccounting" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnMoneyConverter" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:visibility="visible" android:contentDescription="@string/txtImgViewAccounting"/>

</android.support.constraint.ConstraintLayout>